--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0-next.58",
     "web-vitals": "^2.1.2",
