--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0-next.58",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
