--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.1",
     "formik": "^2.2.9",
-    "framer-motion": "^5.5.1",
+    "framer-motion": "^5.5.5",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0-next.58",
+    "react-svg": "^14.1.5",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
