--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^5.5.5",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
@@ -19,6 +20,8 @@
     "react-scripts": "5.0.0-next.58",
     "react-svg": "^14.1.5",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
