--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tilt": "^0.1.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
